--- a/public/styles.css
+++ b/public/styles.css
@@ -101,3 +101,21 @@ form.create-note button {
     cursor: pointer;
     outline: none;
 }
+
+.button {
+    background: #f5ba13;
+    color: #fff;
+    border: none;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    outline: none;
+}
+
+.button:hover {
+    color: #fff;
+}
+
+.link {
+    color: #fff;
+    font-family: "McLaren", cursive;
+}
